--- a/samples/icontest.html
+++ b/samples/icontest.html
@@ -61,11 +61,11 @@
 
       // a collection of colors
       var colors = {
-        blue: "#2a6dc0",
-        orange: "#ea2857",
-        green: "#1cc1bc",
-        gray: "#5b5b5b",
-        white: "#F5F5F5"
+        blue: "#0000FF",
+        orange: "#FF5733",
+        green: "#4CFF33",
+        gray: "#959995",
+        white: "#FFFFFF"
       }
 
       // The first Diagram showcases what the Nodes might look like "in action"
