--- a/samples/icontest.html
+++ b/samples/icontest.html
@@ -51,7 +51,7 @@
     <script src="../release/go.js"></script>
     <div id="allSampleContent" class="p-4 w-full">
 
-  <script src="icons.js"></script>  <!-- load SVG definitions for many icons in the "icons" variable -->
+  <script src="icontest.js"></script>  <!-- load SVG definitions for many icons in the "icons" variable -->
   <script id="code">
     function init() {
 
