--- a/samples/icontest.html
+++ b/samples/icontest.html
@@ -147,7 +147,7 @@
 
       // Convert the icons collection into an Array of JavaScript objects
       var nodeArray = [];
-      for (var k in icons) {
+      for (var k in iconstest) {
         nodeArray.push({ geo: k, color: colors["blue"] });
       }
       myDiagram2.model.nodeDataArray = nodeArray;
