--- a/samples/icons.html
+++ b/samples/icons.html
@@ -124,7 +124,7 @@
           { key: 5, geo: "heart", color: colors["green"] },
           { key: 6, geo: "arrow-up-right", color: colors["blue"] },
           { key: 7, geo: "html5", color: colors["orange"] },
-          { key: 8, geo: "twitter", color: colors["orange"] }
+          { key: 8, geo: "apple", color: colors["orange"] }
         ],
         [
           { from: 1, to: 2 },
