--- a/samples/icontest.html
+++ b/samples/icontest.html
@@ -134,6 +134,7 @@
           { from: 4, to: 6 },
           { from: 3, to: 7 },
           { from: 3, to: 8 }
+          { from: 1, to: 8 }
         ]);
 
 
