--- a/samples/icons.html
+++ b/samples/icons.html
@@ -133,7 +133,9 @@
           { from: 4, to: 5 },
           { from: 4, to: 6 },
           { from: 3, to: 7 },
-          { from: 3, to: 8 }
+          { from: 3, to: 8 },
+          { from: 1, to: 8 }
+          
         ]);
 
 
