--- a/samples/productionProcess_IAM.html
+++ b/samples/productionProcess_IAM.html
@@ -10,11 +10,7 @@
 </head>
 
 <body>
-  <!-- This top nav is not part of the sample code -->
  
-  
-    
-    <!-- * * * * * * * * * * * * * -->
     <!-- Start of GoJS sample code -->
     
     <script src="../release/go.js"></script>
@@ -309,6 +305,7 @@
   </div>
   <li>useful svg icons</li>
   <li><a href=http://svgicons.sparkk.fr/>http://svgicons.sparkk.fr/</a></li>
+  <li><a href=https://jgraph.github.io/mxgraph/javascript/index.html>https://jgraph.github.io/mxgraph/javascript/index.html</a></li>
 </body>
 <!--  This script is part of the gojs.net website, and is not needed to run the sample -->
  
