--- a/samples/productionProcess_IAM.html
+++ b/samples/productionProcess_IAM.html
@@ -222,12 +222,12 @@
     <textarea id="mySavedModel" style="display: none">
 { "class": "GraphLinksModel",
   "nodeDataArray": [
-{"key":1, "pos":"-170 -48", "icon":"singleuser", "color":"blue", "text":"Single\nUser", "description":"Provides associated petroleum gas (APG). This type of gas used to be released as waste from oil drilling, but is now commonly captured for processing.", "caption":"Offshore oil well", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Oil_platform_P-51_%28Brazil%29.jpg/512px-Oil_platform_P-51_%28Brazil%29.jpg"},
-{"key":2, "pos":"190 -50", "icon":"Roles", "color":"blue", "text":"Role", "description":"Provides natural gas liquids (NGLs).", "caption":"Gas Drilling Well", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/BarnettShaleDrilling-9323.jpg/256px-BarnettShaleDrilling-9323.jpg"},
+{"key":1, "pos":"-170 -48", "icon":"singleuser", "color":"blue", "text":"Single\nUser", "description":"User can be Admin, developer based on the role", "caption":"Offshore oil well", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Oil_platform_P-51_%28Brazil%29.jpg/512px-Oil_platform_P-51_%28Brazil%29.jpg"},
+{"key":2, "pos":"190 -50", "icon":"Roles", "color":"blue", "text":"Role", "description":"Based on roles the resources will be accessible", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/BarnettShaleDrilling-9323.jpg/256px-BarnettShaleDrilling-9323.jpg"},
 
-{"key":3, "pos":"-70 110", "icon":"Multiuser", "color":"blue", "text":"User Group", "description":"APG processing turns associated petrolium gas into natural gas liquids (NGLs) and stable natural gas (SGN).", "caption":"Natural gas plant", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Solohiv_natural_gas_plant_-_fragment.jpg/256px-Solohiv_natural_gas_plant_-_fragment.jpg"},
-{"key":4, "pos":"40 -50", "icon":"checklist", "color":"red", "text":"Policy", "description":"Natural gas liquids are separated into individual hydrocarbons like propane and butanes, hydrocarbon mixtures (naphtha) and liquefied petroleum gases (LPGs).", "caption":"Gas Plant", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Gasblok.jpg/256px-Gasblok.jpg"},
-{"key":5, "pos":"300 -50", "icon":"resources", "color":"red", "text":"Cloud Resources", "description":"Natural gas liquids are separated into individual hydrocarbons like propane and butanes, hydrocarbon mixtures (naphtha) and liquefied petroleum gases (LPGs).", "caption":"Gas Plant", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Gasblok.jpg/256px-Gasblok.jpg"}
+{"key":3, "pos":"-70 110", "icon":"Multiuser", "color":"blue", "text":"User Group", "description":"User group will have list of users which have similar kind of access.", "caption":"Natural gas plant", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Solohiv_natural_gas_plant_-_fragment.jpg/256px-Solohiv_natural_gas_plant_-_fragment.jpg"},
+{"key":4, "pos":"40 -50", "icon":"checklist", "color":"red", "text":"Policy", "description":"Policies are the permissions given to specific resources", "caption":"Gas Plant", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Gasblok.jpg/256px-Gasblok.jpg"},
+{"key":5, "pos":"300 -50", "icon":"resources", "color":"red", "text":"Cloud Resources", "description":"All the cloud services can be considered as Cloud Resources", "imgsrc":"https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Gasblok.jpg/256px-Gasblok.jpg"}
 
  ],
   "linkDataArray": [
