--- a/samples/productionProcess_IAM.html
+++ b/samples/productionProcess_IAM.html
@@ -226,7 +226,7 @@
 {"key":2, "pos":"-170 -160", "icon":"Roles", "color":"blue", "text":"Role", "description":"Role is similar to a user, while communicating App to App services we can assign Policies to access resources", "imgsrc":"images/roles.png"},
 
 {"key":3, "pos":"-70 110", "icon":"Multiuser", "color":"blue", "text":"User Group", "description":"User group will have list of users which have similar kind of access to set of resources", "caption":"Natural gas plant", "imgsrc":"images/usergroup.png"},
-{"key":6, "pos":"40 -160", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
+{"key":6, "pos":"40 -160", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications. There are 3 types of policy level 1) user level 2) group level 3) Inline", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
 {"key":4, "pos":"40 -50", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
 {"key":5, "pos":"300 -50", "icon":"resources", "color":"blue", "text":"Cloud Resources", "description":"Resources are nothing but set of cloud services which can be consumed", "imgsrc":"images/cloud_services.png"}
 
