--- a/samples/productionProcess_IAM.html
+++ b/samples/productionProcess_IAM.html
@@ -223,7 +223,7 @@
 { "class": "GraphLinksModel",
   "nodeDataArray": [
 {"key":1, "pos":"-170 -50", "icon":"singleuser", "color":"blue", "text":"Single\nUser", "description":"Based on type of work(administrator, devops, Security) user can have access to limited number of AWS resources, its maintained using Policies", "caption":"Offshore oil well", "imgsrc":"images/user.png"},
-{"key":2, "pos":"-170 -160", "icon":"Roles", "color":"blue", "text":"Role", "description":"Role is similar to a user, while communicating App to App services we can assign Policies to access resources", "imgsrc":"images/roles.png"},
+{"key":2, "pos":"-170 -160", "icon":"Roles", "color":"blue", "text":"Role", "description":"Role is similar to a user, while communicating App to App services we can assign Policies to access resources", "imgsrc":"images/Roles.png"},
 
 {"key":3, "pos":"-70 110", "icon":"Multiuser", "color":"blue", "text":"User Group", "description":"User group will have list of users which have similar kind of access to set of resources", "caption":"Natural gas plant", "imgsrc":"images/usergroup.png"},
 {"key":6, "pos":"40 -160", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications. There are 3 types of policy level 1) user level 2) group level 3) Inline", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
