--- a/samples/productionProcess_IAM.html
+++ b/samples/productionProcess_IAM.html
@@ -209,8 +209,8 @@
 
 <div id="sample">
   <div style="width:100%">
-      <div id="myDiagramDiv" style="border: solid 1px black; width:70%; height:550px; display: inline-block; vertical-align: top"></div>
-      <div id="infobox" style="display: inline-block; vertical-align: top; width: 256px; background: #757575; color: #FFF; padding: 20px;">
+      <div id="myDiagramDiv" style="border: solid 1px black; width:55%; height:550px; display: inline-block; vertical-align: top"></div>
+      <div id="infobox" style="display: inline-block; vertical-align: top; width: 40%; background: #757575; color: #FFF; padding: 20px;">
         <img id="Image" width="216" alt="" src=""/>
         <h3 id="Title"></h3>
         <p id="Description">Select a node to see more information.</p>
@@ -222,22 +222,22 @@
     <textarea id="mySavedModel" style="display: none">
 { "class": "GraphLinksModel",
   "nodeDataArray": [
-{"key":1, "pos":"-170 -50", "icon":"singleuser", "color":"blue", "text":"Single\nUser", "description":"Based on type of work(administrator, devops, Security) user can have access to limited number of AWS resources, its maintained using Policies", "caption":"Offshore oil well", "imgsrc":"images/user.png"},
-{"key":2, "pos":"-170 -160", "icon":"Roles", "color":"blue", "text":"Role", "description":"Role is similar to a user, while communicating App to App services we can assign Policies to access resources", "imgsrc":"images/Roles.png"},
+{"key":1, "pos":"-170 -50", "icon":"singleuser", "color":"red", "text":"Single\nUser", "description":"Based on type of work(administrator, devops, Security) user can have access to limited number of AWS resources, its maintained using Policies", "caption":"Offshore oil well", "imgsrc":"images/user.png"},
+{"key":2, "pos":"-170 -160", "icon":"Roles", "color":"red", "text":"Role", "description":"Role is similar to a user, while communicating App to App services we can assign Policies to access resources", "imgsrc":"images/Roles.png"},
 
-{"key":3, "pos":"-70 110", "icon":"Multiuser", "color":"blue", "text":"User Group", "description":"User group will have list of users which have similar kind of access to set of resources", "caption":"Natural gas plant", "imgsrc":"images/usergroup.png"},
-{"key":6, "pos":"40 -160", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications. There are 3 types of policy level 1) user level 2) group level 3) Inline", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
-{"key":4, "pos":"40 -50", "icon":"checklist", "color":"blue", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
-{"key":5, "pos":"300 -50", "icon":"resources", "color":"blue", "text":"Cloud Resources", "description":"Resources are nothing but set of cloud services which can be consumed", "imgsrc":"images/cloud_services.png"}
+{"key":3, "pos":"-170 100", "icon":"Multiuser", "color":"red", "text":"User Group", "description":"User group will have list of users which have similar kind of access to set of resources", "caption":"Natural gas plant", "imgsrc":"images/usergroup.png"},
+{"key":4, "pos":"40 -50", "icon":"checklist", "color":"red", "text":"Policy", "description":"Policies are set of rules which are applies while accessing the resources by users or groups or applications. There are 3 types of policy level 1) user level 2) group level 3) Inline", "caption":"Gas Plant", "imgsrc":"images/policy.png"},
+
+{"key":5, "pos":"300 -50", "icon":"resources", "color":"red", "text":"Cloud Resources", "description":"Resources are nothing but set of cloud services which can be consumed based on assigned Permissions", "imgsrc":"images/cloud_services.png"}
 
  ],
   "linkDataArray": [
-{"from":1, "to":5, "points":[-150,-41, 20,-41.33333333333333]},
-{"from":2, "to":6, "points":[-150,-150,0,-150]},
-{"from":6, "to":5, "points":[70,-150,300,-150,300,-90]},
-{"from":2, "to":3, "points":[-170,0,-170,103,-140,103,-120,103,-120,103,-100,103,-90,103]},
-{"from":3, "to":4, "points":[-50,98.66666666666667,-40,98.66666666666667,-15,98.66666666666667,-15,-35.666666666666667,-250,-35.666666666666667,20,-35.666666666666667]},
-{"from":4, "to":5, "points":[20,-41,280,-41]}
+{"from":1, "to":5, "points":[-150,-40, 20,-40]},
+
+{"from":6, "to":5, "points":[-150,-150,-80,-150,-80,-40,-40,-40]},
+
+{"from":3, "to":4, "points":[-150,90,-80,90,-80,-40,-40,-40]},
+{"from":4, "to":5, "points":[20,-40,280,-40]}
  
  ]}
     </textarea>
